// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductEntitiesReducer ADD_SUCCESS should add a new product id 3 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": 1,
      "name": "Name 1",
    },
    "2": Object {
      "id": 2,
      "name": "Name 2",
    },
    "3": Object {
      "name": "Name 3",
    },
  },
  "selectedId": null,
  "updated": false,
  "updating": false,
}
`;

exports[`ProductEntitiesReducer LOAD_SUCCESS should return state with product entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "name": "Name1",
    },
    "2": Object {
      "name": "Name2",
    },
  },
  "selectedId": null,
  "updated": false,
  "updating": false,
}
`;

exports[`ProductEntitiesReducer SELECT should set selected product (id 1) 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": 1,
      "name": "Name 1",
    },
    "2": Object {
      "id": 2,
      "name": "Name 2",
    },
  },
  "selectedId": 1,
  "updated": false,
  "updating": false,
}
`;

exports[`ProductEntitiesReducer Selectors getEntities should return entities 1`] = `
Object {
  "1": Object {
    "id": 1,
    "name": "Name 1",
  },
  "2": Object {
    "id": 2,
    "name": "Name 2",
  },
}
`;

exports[`ProductEntitiesReducer Selectors getSelectedId should return selected id (1) 1`] = `1`;

exports[`ProductEntitiesReducer Selectors getUpdated should return updated true 1`] = `true`;

exports[`ProductEntitiesReducer Selectors getUpdating should return updating true 1`] = `true`;

exports[`ProductEntitiesReducer UPDATE should set updating to true 1`] = `
Object {
  "entities": Object {},
  "selectedId": null,
  "updated": false,
  "updating": true,
}
`;

exports[`ProductEntitiesReducer UPDATE_FAILURE & SHOW_MODAL_UPDATE should set updating to false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": 1,
      "name": "Name",
    },
  },
  "selectedId": null,
  "updated": false,
  "updating": false,
}
`;

exports[`ProductEntitiesReducer UPDATE_FAILURE & SHOW_MODAL_UPDATE should set updating to false, updated to false when show modal 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "id": 1,
      "name": "Name",
    },
  },
  "selectedId": null,
  "updated": false,
  "updating": false,
}
`;

exports[`ProductEntitiesReducer UPDATE_SUCCESS should update product id 1, upated should be true and updating false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "name": "Name 1 updated",
    },
    "2": Object {
      "id": 2,
      "name": "Name 2",
    },
  },
  "selectedId": null,
  "updated": true,
  "updating": false,
}
`;

exports[`ProductEntitiesReducer undefined action should return the default state 1`] = `
Object {
  "entities": Object {},
  "selectedId": null,
  "updated": false,
  "updating": false,
}
`;
